# Haskellbook

./: README.md
H02/: Wax.hs  test.hs
H03/: buildingfunctions.hs  print3.hs  print3Flipped.hs  print3broken.hs  rvrs.hs
H04/: exercises.hs
H05/: determinethetype.hs
H06/: eqinstances.hs  typecheck.hs
H07/: registereduser.hs
H08/: recursion.hs
H09/: cipher.hs  exercises.hs  listcomprehend.hs  myfunctions.hs  symmetry.hs  zipping.hs
H10/: DBase.hs  Exercises.hs  Folding.hs  MyFoldFunctions.hs
H11/: BinaryTree.hs  Cipher2.hs  DataTypes.hs  Exercises.hs  Goats.hs  Vehicles.hs
H12/: Exercises.hs
H13/: Cipher3.hs  GimmePerson.hs  Palindrome.hs
H13/hangman/: hangman.cabal
H13/hangman/src/: Main.hs
H14/Tests/: Addition.hs  addition.cabal
H15/Exercises/: Exercises.hs  MonoidExercises.hs  SemigroupExercises.hs  exercises.cabal
H15/Optional/: Optional.hs  optional.cabal
H16/: Exercises.hs  InstancesOfFunc.hs  instancesOfFunc.cabal
H17/: Exercises.hs
H17/PropertyTests/: PropertyTests.hs  propertyTests.cabal
H18/: Exercises.cabal  Exercises.hs
H2/: FunctionsWithLet.hs  FunctionsWithWhere.hs  letToWhere.hs
H20/: ChapterExercises.hs  LibraryFunctions.hs
H21/: ChapterExercises.cabal  ChapterExercises.hs
H22/: ChapterExercises.hs  Exercises.hs
H23/: Exercises.hs
H25/: Exercises.hs
H26/: ChapterExercises.hs  Exercises.hs
H5/: Arith3broken.hs  exercises.hs  sing.hs
H6/: date.hs
H7/: arith4.hs  casepractice.hs  exercises.hs  grabbag.hs  penguins.hs
H8/: wordnumber.hs
H9/: PoemLines.hs  enums.hs  filtering.hs
(+2 files in other folders)
