name:          instancesOfFunc
version:       0.1.0.0
Author:        Sander Markies
maintainer:    someone@somewhere.com
category:      Text
build-type:    Simple
cabal-version: >=1.10

library
  exposed-modules:     InstancesOfFunc
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >=4.7 && <5
                     , hspec
                     , QuickCheck
  hs-source-dirs:      .
  default-language:    Haskell2010
