name:          Exercises
version:       0.1.0.0
Author:        Sander Markies
maintainer:    someone@somewhere.com
category:      Text
build-type:    Simple
cabal-version: >=1.10

library
  exposed-modules:     Exercises
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >=4.7 && <5
                     , hspec
                     , QuickCheck
                     , checkers
  hs-source-dirs:      .
  default-language:    Haskell2010
